# AdventOfCode2024

./: .gitignore  CMakeLists.txt  README.md  build_and_run.bash  template.cpp
src/day01/: CMakeLists.txt  part1.cpp  part2.cpp
src/day02/: CMakeLists.txt  part1.cpp  part2.cpp
src/day03/: CMakeLists.txt  part1.cpp  part2.cpp
src/day04/: CMakeLists.txt  part1.cpp  part2.cpp
src/day05/: CMakeLists.txt  part1.cpp
src/day06/: CMakeLists.txt  part1.cpp  part2.cpp
src/day07/: CMakeLists.txt  part1.cpp  part2.cpp
